--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Gradle files
 .gradle/
 build/
+app/build/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -32,3 +33,10 @@ google-services.json
 
 # Android Profiling
 *.hprof
+
+# OS/Editor files
+.DS_Store
+Thumbs.db
+.vscode/
+*.swp
+*.swo
