feat: overhaul Nostr key management and maintenance record domain models
- Refactor MaintenanceRecord, OwnershipTransfer, TechnicianSignoff data classes for Nostr event compatibility and Moshi serialization
- Add KeyInfo data class for key management
- Implement NostrEvent model with event kind constants and tag helpers
- Rewrite NostrClient for multi-key support, encrypted key storage, key selection, import/export, and event signing
- Add KeyAdapter, KeySelectionAdapter, KeySelectionDialog, and NostrKeyManagerActivity for key management UI
- Update MainActivity and CreateRecordActivity for key selection, record creation, and sample data loading
- Add and update vector drawables for icons (settings, key, QR, export, edit, delete, star, text, arrow)
- Add custom button and icon styles, colors, and badge backgrounds
- Redesign layouts for main screen, record creation, key manager, key selection, and key list items
- Update app name and theme resources for branding and Material styling
- Remove obsolete NostrEvent data class from old location

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name=".MaintenanceRecordsApp"
@@ -42,5 +43,10 @@
             android:name=".ui.NostrVerifyActivity"
             android:label="Nostr Verification"
             android:parentActivityName=".RecordDetailActivity" />
+            
+        <activity
+            android:name=".ui.NostrKeyManagerActivity"
+            android:label="Key Management"
+            android:parentActivityName=".MainActivity" />
     </application>
 </manifest>
