--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,14 @@
         android:roundIcon="@android:mipmap/sym_def_app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MaintenanceRecords"
+        android:theme="@style/Theme.MaintenanceRecords.Material"
         tools:targetApi="31">
 
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MaintenanceRecords">
+            android:theme="@style/Theme.MaintenanceRecords.Material">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
